--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         
         <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css" />
-        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/bootstrap-combined.min.css">
         <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-theme.css" />
         <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
         <link rel="stylesheet" href="lib/durandal/css/durandal.css" />
